--- a/Calendar.html
+++ b/Calendar.html
@@ -59,25 +59,22 @@
     </div>
 </nav> <!-- Closes nav bar -->
 
-<div class="container-fluid text-center upcoming"> <!-- Opens container for Store -->
-    <div class=""> <!-- Opens row for Store -->
-        <div class="container text-left">
-            <div class="row">
-                <div class="col-md-4 bag">
-                    <h1>Upcoming Events</h1>
-                    <p>In addition to our scheduled events that are listed below, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until at The Fiddle and Bow Music Hall. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is canceled. You can find all our social media <a class="link-opacity-100-hover" href="https://linktr.ee/thefiddleandbowmusichall">here</a>. $5 Dollar Fridays are events we host as they come up that focus on local talent. A $5 bill will get you in the Red Door. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
-                </div>
-                <div class="col-md-4 tnb">
-                    <img src="images/Tuesday Night Bluegrass Logo.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                </div>
-                <div class="col-md-4 friday">
-                        <img src="images/5 Dollar Friday.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                </div>
-                </div>
-            </div>
+<div class="container text-left col full calendar">
+    <div class="row content">
+        <div class="col-md-4 show-1">
+            <H1>Upcoming Events</H1>
+            <p>In addition to our scheduled events that are listed below, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until at The Fiddle and Bow Music Hall. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is canceled. You can find all our social media <a class="link-opacity-100-hover" href="https://linktr.ee/thefiddleandbowmusichall">here</a>. $5 Dollar Fridays are events we host as they come up that focus on local talent. A $5 bill will get you in the Red Door. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
         </div>
-    </div> <!-- Closes row for Store -->
-</div> <!-- Closes container for Store -->
+
+        <div class="col-md-4 show-2">
+            <img src="images/Tuesday Night Bluegrass Logo.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+        </div>
+
+        <div class="col-md-4 show-3">
+            <img src="images/5 Dollar Friday.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+        </div>
+    </div>
+</div>
 
 <div class="container text-left col full calendar">
             <H1>Full Calendar</H1>
