--- a/Store.html
+++ b/Store.html
@@ -92,22 +92,22 @@
       <h1>Upcoming Shows at The Fiddle & Bow Music Hall</h1>
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
-                <div class="col-sm-4 show-1">
-            <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>$5 Dollar Friday - Madison Medlin</h2>
-            <h3>May 10th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $5</h3>
-            <a href="https://www.eventbrite.com/e/madison-medlin-tickets-797336353497?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-          </div>
-          <div class="col-sm-4 show-2">
-            <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Margaret Haynie</h2>
-            <h3>May 24th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/an-intimate-evening-with-margaret-haynie-tickets-892172430757?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-          </div>
+        <div class="col-sm-4 show-1">
+          <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
+          <h2>Margaret Haynie</h2>
+          <h3>May 24th, 2024</h3>
+          <h3>Red Door 6PM | Show 7PM</h3>
+          <h3>Tickets $10</h3>
+          <a href="https://www.eventbrite.com/e/an-intimate-evening-with-margaret-haynie-tickets-892172430757?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
+      </div>
+      <div class="col-md-4 show-2">
+        <img src="images/Tugalo Holler.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+        <h2>Tugalo Holler</h2>
+        <h3>May 25th, 2024</h3>
+        <h3>Red Door 6PM | Show 7PM</h3>
+        <h3>Tickets $15</h3>
+        <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-865460444487?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+      </div>
           <div class="col-sm-4 never-know">
             <div class="">
               <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
