--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@
       <a href="https://www.eventbrite.com/e/an-evening-with-tim-menzies-tickets-862471043107?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-md-4 show-2">
-      <img src="Dr Mac Arnold_Branded_June 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <img src="images/Dr Mac Arnold_Branded_June 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>Dr. Mac Arnold & John Hartness Duo</h2>
       <h3>June 21st, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
