--- a/Store.html
+++ b/Store.html
@@ -93,20 +93,20 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         <div class="col-sm-4 show-1">
-          <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
-          <h2>Margaret Haynie</h2>
-          <h3>May 24th, 2024</h3>
+          <img src="images/Tim Menzies" class="img-fluid" style="width: 100%" alt="Responsive image">
+          <h2>Tim Menzies</h2>
+          <h3>June 8th, 2024</h3>
           <h3>Red Door 6PM | Show 7PM</h3>
-          <h3>Tickets $10</h3>
-          <a href="https://www.eventbrite.com/e/an-intimate-evening-with-margaret-haynie-tickets-892172430757?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
+          <h3>Tickets $20</h3>
+          <a href="https://www.eventbrite.com/e/an-evening-with-tim-menzies-tickets-862471043107?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
       </div>
       <div class="col-md-4 show-2">
-        <img src="images/Tugalo Holler.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-        <h2>Tugalo Holler</h2>
-        <h3>May 25th, 2024</h3>
+        <img src="images/Dr Mac Arnold_Branded_June 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+        <h2>Dr. Mac Arnold and John Hartness Duo</h2>
+        <h3>June 24th, 2024</h3>
         <h3>Red Door 6PM | Show 7PM</h3>
         <h3>Tickets $15</h3>
-        <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-865460444487?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+        <a href="https://www.eventbrite.com/e/legendary-dr-mac-arnold-and-john-hartness-duo-tickets-822143412077?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
       </div>
           <div class="col-sm-4 never-know">
             <div class="">
