--- a/Store.html
+++ b/Store.html
@@ -93,7 +93,7 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         <div class="col-sm-4 show-1">
-          <img src="images/Tim Menzies" class="img-fluid" style="width: 100%" alt="Responsive image">
+          <img src="images/Tim Menzies.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
           <h2>Tim Menzies</h2>
           <h3>June 8th, 2024</h3>
           <h3>Red Door 6PM | Show 7PM</h3>
