--- a/Calendar.html
+++ b/Calendar.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="col-md-4 show-8">
-            <img src="images/" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <img src="images/Cross Eyed Possum I.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>The Cross-Eyed Possum</h2>
             <h3>July 23rd, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -158,7 +158,7 @@
         </div>
 
         <div class="col-md-4 show-9">
-            <img src="images/" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <img src="images/Chuck Mead Birthday Bash I.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Chuck Mead and The Stalwarts *Justin Thmoas Atkin Birthday Bash*</h2>
             <h3>July 23rd, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -178,7 +178,7 @@
         </div>
 
         <div class="col-md-4 show-11">
-            <img src="images/" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <img src="images/Carolina Bluegrass Style.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Carolina Bluegrass Style</h2>
             <h3>August 31st, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
