--- a/About.html
+++ b/About.html
@@ -102,7 +102,7 @@
       <h3>June 22nd, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
       <h3>Tickets $20</h3>
-      <a href="https://www.eventbrite.com/e/an-evening-with-tim-menzies-tickets-862471043107?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+      <a href="https://www.eventbrite.com/e/jesse-and-noah-bellamy-tickets-860048366817?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
     </div>
     
     <div class="col-sm-4 never-know">
