--- a/Contact.html
+++ b/Contact.html
@@ -116,8 +116,8 @@
       <a href="https://www.eventbrite.com/e/legendary-dr-mac-arnold-and-john-hartness-duo-tickets-822143412077?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-md-4 show-2">
-      <img src="Bellamy.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>Dr. Mac Arnold and John Hartness Duo</h2>
+      <img src="images/Bellamy.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>Jesse & Noah Bellamy</h2>
       <h3>June 22nd, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
       <h3>Tickets $20</h3>
