--- a/Calendar.html
+++ b/Calendar.html
@@ -185,7 +185,7 @@
         </div>
 
         <div class="col-md-4 show-11">
-            <img src="" class="img-fluid" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <img src="images/Cassie and Maggie_Branded_1.jpg" class="img-fluid" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Cassie & Maggie</h2>
             <h3>August 25th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
