--- a/Calendar.html
+++ b/Calendar.html
@@ -161,7 +161,7 @@
 
         <div class="col-md-4 show-9">
             <img src="images/Peanutt Montgomery_Branded.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Earl "Peanutt" Montgomery with Special Guest Gale Jenkins</h2>
+            <h2>Earl "Peanutt" Montgomery w/ Special Guest Gale Jenkins</h2>
             <h3>August 23rd, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
