--- a/About.html
+++ b/About.html
@@ -102,7 +102,7 @@
       <h3>July 5th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
       <h3>Tickets $40</h3>
-      <a href="https://www.eventbrite.com/e/jesse-and-noah-bellamy-tickets-860048366817?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
+      <a href="https://www.eventbrite.com/e/legendary-country-music-show-featuring-david-wills-and-the-joe-olds-band-tickets-883730079457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     
     <div class="col-sm-4 never-know">
