--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@
       <a href="https://www.eventbrite.com/e/carly-rikard-and-the-show-goats-tickets-796904511847?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-sm-4 show-2">
-      <img src="Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <img src="images/Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>David Wills w/ Special Guest The Joe Olds Band</h2>
       <h3>July 5th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
