--- a/Contact.html
+++ b/Contact.html
@@ -108,19 +108,19 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
     <div class="col-sm-4 show-1">
-      <img src="images/Dr Mac Arnold_Branded_June 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>Dr. Mac Arnold and John Hartness Duo</h2>
-      <h3>June 21st, 2024</h3>
+      <img src="images/Rikard_JUN24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>Carly Rikard & The Show Goats</h2>
+      <h3>June 29th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $15</h3>
-      <a href="https://www.eventbrite.com/e/legendary-dr-mac-arnold-and-john-hartness-duo-tickets-822143412077?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+      <h3>Tickets $10</h3>
+      <a href="https://www.eventbrite.com/e/carly-rikard-and-the-show-goats-tickets-796904511847?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-md-4 show-2">
-      <img src="images/Bellamy.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>Jesse & Noah Bellamy</h2>
-      <h3>June 22nd, 2024</h3>
+      <img src="images/Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>David Wills w/ Special Guest The Joe Olds Band</h2>
+      <h3>July 5th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $20</h3>
+      <h3>Tickets $40</h3>
       <a href="https://www.eventbrite.com/e/jesse-and-noah-bellamy-tickets-860048366817?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-sm-4 never-know">
