--- a/Contact.html
+++ b/Contact.html
@@ -121,7 +121,7 @@
       <h3>July 5th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
       <h3>Tickets $40</h3>
-      <a href="https://www.eventbrite.com/e/jesse-and-noah-bellamy-tickets-860048366817?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
+      <a href="https://www.eventbrite.com/e/legendary-country-music-show-featuring-david-wills-and-the-joe-olds-band-tickets-883730079457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
