--- a/About.html
+++ b/About.html
@@ -97,7 +97,7 @@
       <a href="https://www.eventbrite.com/e/legendary-country-music-show-featuring-david-wills-and-the-joe-olds-band-tickets-883730079457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-sm-4 show-2">
-      <img src="images/Austin Irby_For Real_Branded_July 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <img src="images/Austin Irby.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>Austin Irby "For Real"</h2>
       <h3>July 13th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
