--- a/Store.html
+++ b/Store.html
@@ -92,22 +92,22 @@
       <h1>Upcoming Shows at The Fiddle & Bow Music Hall</h1>
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
-        <div class="col-sm-4 show-1">
-        <img src="images/Rikard_JUN24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-        <h2>Carly Rikard & The Show Goats</h2>
-        <h3>June 29th, 2024</h3>
-        <h3>Red Door 6PM | Show 7PM</h3>
-        <h3>Tickets $10</h3>
-        <a href="https://www.eventbrite.com/e/carly-rikard-and-the-show-goats-tickets-796904511847?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-      </div>
-      <div class="col-md-4 show-2">
-        <img src="images/Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-        <h2>David Wills w/ Special Guest The Joe Olds Band</h2>
-        <h3>July 5th, 2024</h3>
-        <h3>Red Door 6PM | Show 7PM</h3>
-        <h3>Tickets $40</h3>
-        <a href="https://www.eventbrite.com/e/legendary-country-music-show-featuring-david-wills-and-the-joe-olds-band-tickets-883730079457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-      </div>
+      <div class="col-sm-4 show-1">
+      <img src="images/Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>David Wills w/ Special Guest The Joe Olds Band</h2>
+      <h3>July 5th, 2024</h3>
+      <h3>Red Door 6PM | Show 7PM</h3>
+      <h3>Tickets $40</h3>
+      <a href="https://www.eventbrite.com/e/legendary-country-music-show-featuring-david-wills-and-the-joe-olds-band-tickets-883730079457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+    </div>
+    <div class="col-sm-4 show-2">
+      <img src="images/Austin Irby.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>Austin Irby "For Real"</h2>
+      <h3>July 13th, 2024</h3>
+      <h3>Red Door 6PM | Show 7PM</h3>
+      <h3>Tickets $20</h3>
+      <a href="https://www.eventbrite.com/e/austin-irby-for-real-event-tickets-850409907927?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+    </div>
           <div class="col-sm-4 never-know">
             <div class="">
               <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
