--- a/Calendar.html
+++ b/Calendar.html
@@ -134,7 +134,7 @@
         <div class="col-md-4 show-6">
             <img src="images/Chuck Mead Birthday Bash I.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Chuck Mead and The Stalwarts *Justin Thomas Atkin Birthday Bash*</h2>
-            <h3>July 23rd, 2024</h3>
+            <h3>July 27th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $25</h3>
             <a href="https://www.eventbrite.com/e/chuck-mead-and-the-stalwarts-birthday-bash-for-justin-thomas-atkin-tickets-914159805587?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>     
@@ -225,7 +225,7 @@
         </div>
 
          <div class="col-md-4 show-15">
-           <img src="" class="img-fluid" style="width: 100%" alt="Responsive image">
+           <img src="images/Kevin Spencer.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Kevin Spencer</h2>
             <h3>September 21st, 2024</h3> 19th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -247,12 +247,12 @@
         </div>
 
          <div class="col-md-4 show-17">
-            <img src="" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>TBA</h2>
+            <img src="images/Po Ramblin Boys.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>The Po Ramblin' Boys w/ Special Guest Blue Sparrow Show Band</h2>
             <h3>November 16th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>TBA</h3>
-            <a href="https://linktr.ee/thefiddleandbowmusichall" class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/the-po-ramblin-boys-w-special-guests-blue-sparrow-show-band-tickets-929214283937?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-18">
