--- a/Contact.html
+++ b/Contact.html
@@ -107,22 +107,23 @@
 <div class="container text-left"> <!-- Opens Upcoming Shows Container -->
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
-      <div class="col-sm-4 show-1">
-      <img src="images/Edgar Loudermilk Band.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>The Edgar Loudermilk Band</h2>
-      <h3>July 20th, 2024</h3>
-      <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $20</h3>
-      <a href="https://www.eventbrite.com/e/award-winning-bluegrass-with-the-edgar-loudermilk-band-tickets-865472721207?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-    </div>
-    <div class="col-sm-4 show-2">
-      <img src="images/Cross Eyed Possum I.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>The Cross-Eyed Possum</h2>
-      <h3>July 23rd, 2024</h3>
-      <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $12</h3>
-      <a href="https://www.eventbrite.com/e/the-cross-eyed-possum-tickets-912329029687?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-    </div>
+   <div class="col-sm-4 show-1">
+            <img src="images/Marty Haggard.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Marty Haggard</h2>
+            <h3>August 9th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $40</h3>
+            <a href="https://www.eventbrite.com/e/marty-haggard-tickets-883789246427?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>    
+        </div>
+
+        <div class="col-sm-4 show-2">
+            <img src="images/Peanutt Montgomery_Branded.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Earl "Peanutt" Montgomery w/ Special Guest Gale Jenkins</h2>
+            <h3>August 23rd, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/country-music-icon-earl-peanutt-montgomery-with-guest-gale-jenkins-tickets-924045734667?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>    
+        </div>
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
     </div>
