--- a/About.html
+++ b/About.html
@@ -99,7 +99,12 @@
         </div>
 
         <div class="col-md-4 show-2">
-               
+            <img src="images/BrandNewBoxOfMatches.jpg" class="img-fluid" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+            <h3>August 24th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-w-special-opener-will-milford-tickets-850398383457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
