--- a/Contact.html
+++ b/Contact.html
@@ -117,7 +117,13 @@
         </div>
 
         <div class="col-sm-4 show-2">
-              
+            <div class="col-md-4 show-3">
+            <img src="images/BrandNewBoxOfMatches.jpg" class="img-fluid" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+            <h3>August 24th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-w-special-opener-will-milford-tickets-850398383457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
