--- a/Calendar.html
+++ b/Calendar.html
@@ -86,7 +86,7 @@
         <div class="col-md-4 show-1">
            <img src="images/Willie Wells.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Willie Wells and The Blue Ridge Mountain Grass</h2>
-            <h3>September 14th, 2024</h3> 19th, 2024</h3>
+            <h3>September 14th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/willie-wells-and-the-blue-ridge-mountain-grass-tickets-874105532177?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
