--- a/Calendar.html
+++ b/Calendar.html
@@ -107,7 +107,7 @@
             <h3>September 21st adn 22nd, 2024</h3>
             <h3>10AM - 5PM</h3>
             <h3>Tickets $10</h3>
-            <a href="https://paradisegardenfoundation.org/upcomingevents/" role="button">Tickets</a>  
+            <a href="https://paradisegardenfoundation.org/upcomingevents/" class="btn custom-btn" role="button">Tickets</a> 
         </div>
             
     </div>
