--- a/Calendar.html
+++ b/Calendar.html
@@ -126,7 +126,7 @@
          <div class="col-md-4 show-5">
             <img src="images/Kentuck 2024.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>53rd Kentuck Festival of the Arts in Tuscaloosa, AL</h2>
-            <h3>October 19th, 2024</h3>
+            <h3>October 19th and 20th, 2024</h3>
             <h3>9AM - 4PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.kentuck.org/the-festival" class="btn custom-btn" role="button">Tickets</a>  
