--- a/About.html
+++ b/About.html
@@ -90,21 +90,21 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
     
         <div class="col-md-4 show-1">
-            <img src="images/Peanutt Montgomery_Branded.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Earl "Peanutt" Montgomery w/ Special Guest Gale Jenkins</h2>
-            <h3>August 23rd, 2024</h3>
+           <img src="images/Willie Wells.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Willie Wells and The Blue Ridge Mountain Grass</h2>
+            <h3>September 14th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/country-music-icon-earl-peanutt-montgomery-with-guest-gale-jenkins-tickets-924045734667?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>    
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/willie-wells-and-the-blue-ridge-mountain-grass-tickets-874105532177?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-md-4 show-2">
-            <img src="images/BrandNewBoxOfMatches.jpg" class="img-fluid" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
-            <h3>August 24th, 2024</h3>
+           <img src="images/Kevin Spencer.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Kevin Spencer</h2>
+            <h3>September 21st, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-w-special-opener-will-milford-tickets-850398383457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <a href="https://www.eventbrite.com/e/kevin-spencer-tickets-937426446737?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
