--- a/Calendar.html
+++ b/Calendar.html
@@ -146,7 +146,7 @@
       <div class="row content">
          
         <div class="col-md-4 show-4">
-            <img src="images/" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <img src="images/Cody Gentry.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Cody Gentry and Mac Leaphart w/ Special Guest Lauren Link</h2>
             <h3>November 22nd, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -155,7 +155,7 @@
         </div>
 
          <div class="col-md-4 show-5">
-            <img src="images/" style="width: 100%" alt="Responsive image">
+            <img src="images/Martha Spencer 1.PNG" style="width: 100%" alt="Responsive image">
             <h2>Martha Spencer and The Wonderland Country Band</h2>
             <h3>December 7th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
