--- a/About.html
+++ b/About.html
@@ -88,23 +88,23 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
-    
-        <div class="col-md-4 show-1">
-           <img src="images/Willie Wells.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Willie Wells and The Blue Ridge Mountain Grass</h2>
-            <h3>September 14th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/willie-wells-and-the-blue-ridge-mountain-grass-tickets-874105532177?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
 
-        <div class="col-md-4 show-2">
+        <div class="col-md-4 show-1">
            <img src="images/Kevin Spencer.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Kevin Spencer</h2>
             <h3>September 21st, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
             <a href="https://www.eventbrite.com/e/kevin-spencer-tickets-937426446737?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-2">
+           <img src="images/Finster Fest 2024.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Finster Fest in Summerville, GA</h2>
+            <h3>September 21st adn 22nd, 2024</h3>
+            <h3>10AM - 5PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://paradisegardenfoundation.org/upcomingevents/" class="btn custom-btn" role="button">Tickets</a> 
         </div>
     
     <div class="col-sm-4 never-know">
