--- a/Calendar.html
+++ b/Calendar.html
@@ -147,7 +147,7 @@
           
         <div class="col-md-4 show-5">
             <img src="images/Retro 78.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Retro 78/h2>
+            <h2>Retro 78</h2>h2>
             <h3>November 30th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
