--- a/About.html
+++ b/About.html
@@ -90,21 +90,21 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
         <div class="col-md-4 show-1">
-           <img src="images/Kevin Spencer.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Kevin Spencer</h2>
-            <h3>September 21st, 2024</h3>
+            <img src="images/Austin Irby_Elvis_Branded_October 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Austin Irby as ELVIS</h2>
+            <h3>October 19th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/kevin-spencer-tickets-937426446737?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/austin-irby-as-elvis-tickets-850416457517?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-2">
-           <img src="images/Finster Fest 2024.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Finster Fest in Summerville, GA</h2>
-            <h3>September 21st adn 22nd, 2024</h3>
-            <h3>10AM - 5PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://paradisegardenfoundation.org/upcomingevents/" class="btn custom-btn" role="button">Tickets</a> 
+        <div class="col-md-4 show-2">
+            <img src="images/Kentuck 2024.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>53rd Kentuck Festival of the Arts in Tuscaloosa, AL</h2>
+            <h3>October 19th and 20th, 2024</h3>
+            <h3>9AM - 4PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.kentuck.org/the-festival" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
