--- a/Store.html
+++ b/Store.html
@@ -94,21 +94,21 @@
       <div class="row">
 
         <div class="col-sm-4 show-1">
-            <img src="images/Austin Irby_Elvis_Branded_October 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Austin Irby as ELVIS</h2>
-            <h3>October 19th, 2024</h3>
+            <img src="images/Po Ramblin Boys.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>The Po Ramblin' Boys w/ Special Guest Blue Sparrow Show Band</h2>
+            <h3>November 16th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/austin-irby-as-elvis-tickets-850416457517?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tikcets $30</h3>
+            <a href="https://www.eventbrite.com/e/the-po-ramblin-boys-w-special-guests-blue-sparrow-show-band-tickets-929214283937?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
         <div class="col-sm-4 show-2">
-            <img src="images/Kentuck 2024.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>53rd Kentuck Festival of the Arts in Tuscaloosa, AL</h2>
-            <h3>October 19th and 20th, 2024</h3>
-            <h3>9AM - 4PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.kentuck.org/the-festival" class="btn custom-btn" role="button">Tickets</a>  
+            <img src="images/Cody Gentry.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Cody Gentry and Mac Leaphart w/ Special Guest Lauren Link</h2>
+            <h3>November 22nd, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/cody-gentry-mac-leaphart-w-special-guest-lauren-link-tickets-1010825264577?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
           <div class="col-sm-4 never-know">
