--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,22 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-        <div class="col-sm-4 show-1">
-            <img src="images/Po Ramblin Boys.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>The Po Ramblin' Boys w/ Special Guest Blue Sparrow Show Band</h2>
-            <h3>November 16th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tikcets $30</h3>
-            <a href="https://www.eventbrite.com/e/the-po-ramblin-boys-w-special-guests-blue-sparrow-show-band-tickets-929214283937?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-sm-4 show-2">
+          <div class="col-sm-4 show-1">
             <img src="images/Cody Gentry.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>Cody Gentry and Mac Leaphart w/ Special Guest Lauren Link</h2>
             <h3>November 22nd, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/cody-gentry-mac-leaphart-w-special-guest-lauren-link-tickets-1010825264577?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+        <div class="col-sm-4 show-2">
+            <img src="images/Retro 78.PNG" style="width: 100%" alt="Responsive image">
+            <h2>Retro 78</h2>
+            <h3>November 30th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/retro-78-tickets-1009221698267?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
