--- a/Calendar.html
+++ b/Calendar.html
@@ -122,6 +122,15 @@
             <a href="https://www.eventbrite.com/e/christmas-show-with-nicole-marie-quinn-tickets-1072701943389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
+        <div class="col-md-4 show-4">
+            <img src="images/New Years Eve.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Austin's Rockin' New Years </h2>
+            <h3>December 31st, 2024</h3>
+            <h3>Red Door 7PM | Show 8PM</h3>
+            <h3>Tickets $25</h3>
+            <a href="https://www.eventbrite.com/e/christmas-show-with-nicole-marie-quinn-tickets-1072701943389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
         <div class="col-md-4 show-5">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
