--- a/Calendar.html
+++ b/Calendar.html
@@ -124,7 +124,7 @@
 
         <div class="col-md-4 show-4">
             <img src="images/New Years Eve.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Austin's Rockin' New Years </h2>
+            <h2>Austin's Rockin' New Years Show</h2>
             <h3>December 31st, 2024</h3>
             <h3>Red Door 7PM | Show 8PM</h3>
             <h3>Tickets $25</h3>
