--- a/Calendar.html
+++ b/Calendar.html
@@ -114,7 +114,7 @@
     <div class="row content">
 
         <div class="col-md-4 show-4">
-            <img src="images/NMQ Christmas.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/NMW Mod.jpg" style="width: 100%" alt="Responsive image">
             <h2>Chirstmas Show with Nicole Marie Quinn & Special Guests</h2>
             <h3>December 15th, 2024</h3>
             <h3>Red Door 1PM | Show 2PM</h3>
