--- a/Store.html
+++ b/Store.html
@@ -93,22 +93,22 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
 
-         <div class="col-sm-4 show-2">
-            <img src="images/Cody Gentry.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>Cody Gentry and Mac Leaphart w/ Special Guest Lauren Link</h2>
-            <h3>November 22nd, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/cody-gentry-mac-leaphart-w-special-guest-lauren-link-tickets-1010825264577?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-sm-4 show-3">
+          <div class="col-sm-4 show-1">
             <img src="images/Retro 78.PNG" style="width: 100%" alt="Responsive image">
             <h2>Retro 78</h2>
             <h3>November 30th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/retro-78-tickets-1009221698267?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+        <div class="col-sm-4 show-2">
+            <img src="images/Martha Spencer 1.PNG" style="width: 100%" alt="Responsive image">
+            <h2>Martha Spencer and The Wonderland Country Band</h2>
+            <h3>December 7th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1009248538547?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
         
           <div class="col-sm-4 never-know">
