--- a/Calendar.html
+++ b/Calendar.html
@@ -82,15 +82,6 @@
 
     <div class="row content">   
 
-        <div class="col-md-4 show-3">
-            <img src="images/Martha Spencer 1.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Martha Spencer and The Wonderland Country Band</h2>
-            <h3>December 7th, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/martha-spencer-and-the-wonderland-country-band-tickets-1009248538547?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
         <div class="col-md-4 show-4">
             <img src="images/NMW Mod.jpg" style="width: 100%" alt="Responsive image">
             <h2>Chirstmas Show with Nicole Marie Quinn & Special Guests</h2>
@@ -107,6 +98,15 @@
             <h3>Red Door 8PM | Show 9PM</h3>
             <h3>Tickets $25</h3>
             <a href="https://www.eventbrite.com/e/austins-rockin-new-years-eve-show-hosted-by-austin-irby-tickets-1079210821619?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
+         <div class="col-md-4 show-5">
+            <img src="images/Lybrand (1).png" style="width: 100%" alt="Responsive image">
+            <h2>Carter Lybrand</h2>
+            <h3>January 16th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
             
     </div>
