--- a/Calendar.html
+++ b/Calendar.html
@@ -82,7 +82,7 @@
 
     <div class="row content">   
 
-        <div class="col-md-4 show-4">
+        <div class="col-md-4 show-1">
             <img src="images/NMW Mod.jpg" style="width: 100%" alt="Responsive image">
             <h2>Chirstmas Show with Nicole Marie Quinn & Special Guests</h2>
             <h3>December 15th, 2024</h3>
@@ -91,7 +91,7 @@
             <a href="https://www.eventbrite.com/e/christmas-show-with-nicole-marie-quinn-tickets-1072701943389?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-5">
+         <div class="col-md-4 show-2">
             <img src="images/New Years Eve.jpg" style="width: 100%" alt="Responsive image">
             <h2>Austin's Rockin' New Years Show</h2>
             <h3>December 31st, 2024</h3>
@@ -100,8 +100,8 @@
             <a href="https://www.eventbrite.com/e/austins-rockin-new-years-eve-show-hosted-by-austin-irby-tickets-1079210821619?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-         <div class="col-md-4 show-5">
-            <img src="images/Lybrand (1).png" style="width: 100%" alt="Responsive image">
+         <div class="col-md-4 show-3">
+            <img src="images/Carter Lybrand JAN25.jpg" style="width: 100%" alt="Responsive image">
             <h2>Carter Lybrand</h2>
             <h3>January 16th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -113,21 +113,39 @@
 
     <div class="row content">
 
-         <div class="col-md-4 show-5">
-            <img src="images/Lybrand (1).png" style="width: 100%" alt="Responsive image">
-            <h2>Carter Lybrand</h2>
-            <h3>January 16th, 2025</h3>
+         <div class="col-md-4 show-4">
+            <img src="images/Kenny Stinson MAR25.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Kenny Stinson and The Tym's</h2>
+            <h3>March 8th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/carter-lybrand-live-at-the-fiddle-bow-music-hall-tickets-1096700533819?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/kenny-stinson-and-perfect-tymn-tickets-1106771436159?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
-        
+
+        <div class="col-md-4 show-5">
+            <img src="images/Wayne Hancock MAR25.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Wayne "The Train" Hancock</h2>
+            <h3>March 29th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1106737294039?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+
         <div class="col-md-4 show-6">
-            <h2>Your Band Could Be Up Next!</h2>
-            <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
+            <img src="images/Brand New Box of Matches MAY25.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Brand New Box of Matches</h2>
+            <h3>May 17th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $12</h3>
+            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1106779410009?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
         </div>
       
     </div>
+
+        <div class="col-md-4 show-7">
+            <h2>Your Band Could Be Up Next!</h2>
+            <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
+        </div>
 
 </div>
 </div> <!-- Closes "Content Text-Left"-->
